Add project showcase and featured project sections to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -60,32 +60,113 @@
         </div>
     </section>
 
+    <section class="section-projects">
+        <div class="container">
+            <h2>
+                Projects I am proud of
+            </h2>
+            <div class="topgrid">
+                <figure>
+                    <a href="https://frontendmasters.com/courses/css-projects/" target="_blank">
+                        <img src="https://assets.codepen.io/296057/fem-coffee-layout.jpg" alt="project" />
+                    </a>
+                    <figcaption>
+                        <h3>
+                            <a href="https://frontendmasters.com/courses/css-projects/" target="_blank"
+                                aria-hidden="true">
+                                CSS Projects
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <a href="https://frontendmasters.com/courses/advanced-css-layouts" target="_blank">
+                        <img src="https://assets.codepen.io/296057/fem-news.png" alt="project" />
+                    </a>
+                    <figcaption>
+                        <h3>
+                            <a href="https://frontendmasters.com/courses/advanced-css-layouts" target="_blank"
+                                aria-hidden="true">
+                                Advanced CSS Layouts
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <a href="https://frontendmasters.com/bootcamp" target="_blank">
+                        <img src="https://assets.codepen.io/296057/fem-blog.png" alt="project" />
+                    </a>
+                    <figcaption>
+                        <h3>
+                            <a href="https://frontendmasters.com/bootcamp" target="_blank" aria-hidden="true">
+                                Bootcamp
+                            </a>
+                        </h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                        </ul>
+                    </figcaption>
+                </figure>
+            </div>
+
+            <div class="bottomgrid">
+                <a href="https://frontendmasters.com/courses/css-projects/" target="_blank">
+                    <img src="https://assets.codepen.io/296057/fem-bootcamp.png" alt="CSS project" />
+                </a>
+
+                <a href="https://frontendmasters.com/bootcamp" target="_blank">
+                    <img src="https://assets.codepen.io/296057/fem-css-projects.webp" alt="Frontend Masters Bootcamp" />
+                </a>
+                <a href="https://frontendmasters.com/courses/advanced-css-layouts/" target="_blank">
+                    <img src="https://assets.codepen.io/296057/fem-adv-css.jpg" alt="Advanced CSS Layouts" />
+                </a>
+                <a href="https://frontendmasters.com/courses/intermediate-html-css/" target="_blank">
+                    <img src="https://assets.codepen.io/296057/fem-int-css.webp" alt="Intermediate HTML and CSS" />
+                </a>
+                <a href="https://frontendmasters.com/courses/css-layouts" target="_blank">
+                    <img src="https://assets.codepen.io/296057/fem-layouts.webp" alt="Practical CSS Layouts" />
+                </a>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="section-featured">
+        <div class="container">
+            <h2>Featured project</h2>
+            <article>
+                <h3>Practical CSS Layouts</h3>
+                <img src="https://assets.codepen.io/296057/fem-maglime.jpg" alt="screen shot" />
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>SVG</li>
+                </ul>
+                <div class="blackbox">
+                    <p>Starting with the basics of CSS and HTML, you'll progress through creating responsive designs for
+                        mobile, tablet, and desktop layouts. You'll learn to code complex layouts with CSS Grid and
+                        Flexbox and tackle real-world exercises like styling buttons, audio players, hamburger menus</p>
+                </div>
+                <p>
+                    <a href="https://frontendmasters.com/courses/css-layouts/" target="_blank" class="button">Watch the course</a>
+                </p>
+            </article>
+        </div>
+    </section>
 
 
-    <!-- color boxes (eventually) -->
-    <div class="colors">
-        <div class="white"></div>
-        <div class="black"></div>
-        <div class="tan"></div>
-        <div class="green"></div>
-        <div class="lightgreen"></div>
-        <div class="red"></div>
-    </div>
-
-    <!-- type -->
-    <h1>This is Heading 1</h1>
-    <h2>This is Heading 2</h2>
-    <h3>This is Heading 3</h3>
-    <h4>This is Heading 4</h4>
-    <h5>This is Heading 5</h5>
-    <h6>This is Heading 6</h6>
-    <p>This is a paragraph. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, pariatur.</p>
-    <a href="#">A text link by itself</a>
-    <ul>
-        <li>This is an unordered list.</li>
-        <li>Second thing.</li>
-        <li>Third thing.</li>
-    </ul>
 
     <figure>
         <img src="https://assets.codepen.io/296057/fem-stars.jpg"
